ghc-4335c07/testsuite/tests/parser/should_fail/T12811.hs
{-# LANGUAGE RankNTypes #-}
module Bug where

foo :: foral a. a -> a
foo x = x
