ghc-4335c07/testsuite/tests/parser/should_fail/T12811.stderr

T12811.hs:4:15: error:
    Illegal symbol '.' in type
    Perhaps you meant to write 'forall <tvs>. <type>'?
